2003-07-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/win32k/objects/region.c (W32kFillRgn): Fix syntax error.

2003-07-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/rgenstat/rgenstat.c (get_previous_identifier): Skip end-of-line
	characters when searching for identifier.
	(parse_file): Print a warning if no identifier is found.

2003-07-10  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	* subsys/win32k/objects/region.c: (W32kFillRgn) Implement.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/winspool/stubs.c: Add @implemented and @unimplemented to APIs.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/wsock32/stubs.c: Add @implemented and @unimplemented to APIs.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/ws2_32/misc/bsd.c: Add @implemented and @unimplemented to APIs.
	* lib/ws2_32/misc/dllmain.c: Ditto.
	* lib/ws2_32/misc/event.c: Ditto.
	* lib/ws2_32/misc/ns.c: Ditto.
	* lib/ws2_32/misc/sndrcv.c: Ditto.
	* lib/ws2_32/misc/stubs.c: Ditto.
	* lib/ws2_32/misc/upcall.c: Ditto.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/dd/videoprt/videoprt.c: Add @implemented and @unimplemented
	to APIs.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/version/misc/stubs.c: Add @implemented and @unimplemented to APIs.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/user32/misc/dde.c: Add @implemented and @unimplemented to APIs.
	* lib/user32/misc/desktop.c: Ditto.
	* lib/user32/misc/display.c: Ditto.
	* lib/user32/misc/exit.c: Ditto.
	* lib/user32/misc/object.c: Ditto.
	* lib/user32/misc/resources.c: Ditto.
	* lib/user32/misc/sprintf.c: Ditto.
	* lib/user32/misc/stubs.c: Ditto.
	* lib/user32/misc/timer.c: Ditto.
	* lib/user32/misc/winhelp.c: Ditto.
	* lib/user32/misc/winsta.c: Ditto.
	* lib/user32/windows/accel.c: Ditto.
	* lib/user32/windows/bitmap.c: Ditto.